--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -61,7 +61,7 @@ jobs:
     name: Deploy the documentation on GitHub Pages
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/test_spectaql'
 
     permissions:
       pages: write
